# hum

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release-smoke.yml  release.yml
src/: app.rs  main.rs  queue.rs  types.rs
src/player/: mod.rs  mpv_ipc.rs
src/ui/: mod.rs
src/youtube/: mod.rs
