[package]
name = "hum"
version = "0.1.0"
edition = "2021"
description = "A minimal, ad-free terminal music player. No API keys. No subscriptions. Just music."
license = "MIT"
repository = "https://github.com/Devendra116/hum"
keywords = ["music", "terminal", "tui", "youtube", "player"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "hum"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"
unicode-width = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
